tests/compile_errors/unused-import.buzz
// Unused import
import "buzz:math";
import "buzz:std";

test "Doing nothing with the math import" {
    std\print("hello");
}